# Shape-morphing-binder

./: BUILD_WITH_TORCH.md  GRADIENT_FLOW_ANALYSIS.md  PHASE_3_4_COMPLETE.md  README.md  README_GRADIENT_FLOW.md  diffmpm_bindings.cp310-win_amd64.pyd  loss.py  pyproject.toml  run.py  setup.py  test_gradient_flow.py
DiffMPMLib3D/: BackPropagation.cpp  BackPropagation.h  CMakeLists.txt  CompGraph.cpp  CompGraph.h  Elasticity.cpp  Elasticity.h  ForwardSimulation.cpp  ForwardSimulation.h  GeometryLoading.cpp  GeometryLoading.h  Grid.cpp  Grid.h  GridNode.cpp  GridNode.h  Interpolation.h  MaterialPoint.h  PointCloud.cpp  PointCloud.h  SphereUnionSurfacing.cpp  SphereUnionSurfacing.h  Tensor3x3x3x3.cpp  cereal_eigen.h  pch.h
bind/: bind.cpp
configs/: sphere_to_bunny.yaml  sphere_to_spot.yaml
diffmpm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
environment/: environments.yml
gaussian-splatting/: environment.yml
gaussian-splatting/submodules/diff-gaussian-rasterization/diff_gauss/: _C.cp310-win_amd64.pyd
gaussian-splatting/submodules/diff-gaussian-rasterization/diff_gaussian_rasterization/: _C.cp310-win_amd64.pyd
gaussian-splatting/submodules/simple-knn/: setup.py
gaussian-splatting/submodules/simple-knn/simple_knn/: _C.cp310-win_amd64.pyd
include/Eigen/src/Core/: Matrix.h
include/igl/: readOBJ.cpp
include/imgui/imgui/: imgui.h  imgui_widgets.cpp
include/qrsvd/: Tools.h
include/unsupported/Eigen/src/SparseExtra/: MarketIO.h
output/ep000/: ep000_summary.json
renderer/: camera_utils.py  composite_utils.py  renderer.py  shading_utils.py
renderer/core/: renderer.py
sampling/: __init__.py  runtime_surface.py
sampling/analysis/: __init__.py  density.py  detection.py  knn.py  pca.py
sampling/core/: __init__.py  gumbel_sampling.py  point_sampling.py  runtime_surface.py  synthesis.py
sampling/geometry/: __init__.py  mls.py
sampling/io/: __init__.py  export.py
sampling/processing/: __init__.py  deformation.py  smoother.py
sampling/utils/: __init__.py  config.py  utils.py
tests/: test.py
tools/: surface_check.py
